<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="center|top"
    android:orientation="vertical"
    app:layout_anchorGravity="top"
    tools:context=".PerformanceController"
    android:layout_marginTop="20dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_margin="2dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:baselineAligned="false"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_volume"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/lowerVolume"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:insetLeft="2dp"
            android:insetRight="2dp"
            android:text="-"
            android:textSize="30sp" />

        <Button
            android:id="@+id/raiseVolume"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:insetLeft="2dp"
            android:insetRight="2dp"
            android:text="+"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_margin="2dp"/>

    <Button
        android:id="@+id/buttonResetLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:padding="10sp"
        android:text="@string/button_reset_log"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_margin="2dp"/>

    <TextView
        android:id="@+id/label_closing_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Closing Time"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/closing_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
										   
        android:hint="Enter Closing Time"
        android:text="18:15"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:textAlignment="center">

        <Button
            android:id="@+id/setClosingTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginEnd="10dp"
            android:text="Schedule"
            android:textSize="15sp" />

        <Button
            android:id="@+id/cancelClosingTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:text="Cancel"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/sliderMusiciansTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number of nearby Artists"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:translationY="10dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderMusicians"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_gravity="center"
        android:contentDescription="Musicians"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:tickMark="@drawable/tickmark"
        android:stepSize="1"
        android:value="0"
        android:valueFrom="0"
        android:valueTo="10" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_margin="2dp"/>

    <TextView
        android:id="@+id/label_tracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tracking"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:textAlignment="center">

        <Button
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:text="@string/start"
            android:textSize="15sp" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:text="@string/stop"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/getStatusButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:padding="10sp"
        android:text="@string/get_status"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_last_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF1100"
        android:textSize="24sp" />

</LinearLayout>
