<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="center|top"
    android:orientation="vertical"
    app:layout_anchorGravity="top"
    tools:context=".CalibrationController"
    android:layout_marginTop="20dp">

    <Button
        android:id="@+id/SetBaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:padding="10sp"
        android:text="Set Camera Base" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_margin="2dp"/>

    <TextView
        android:id="@+id/sliderWeightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:translationY="10dp"
        android:layout_marginTop="-10dp"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderWeight"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_gravity="center"
        android:contentDescription="Weight"
        android:stepSize="0.05"
        android:value="0.5"
        android:valueFrom="0.0"
        android:valueTo="1" />

    <TextView
        android:id="@+id/sliderMinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Minimum Threshold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:translationY="10dp"
        android:layout_marginTop="-15dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderMinValue"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_gravity="center"
        android:contentDescription="Minimum Threshold"
        android:stepSize="1"
        android:value="3"
        android:valueFrom="0.0"
        android:valueTo="50" />

    <TextView
        android:id="@+id/sliderMaxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Maximum Value"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:translationY="10dp"
        android:layout_marginTop="-15dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderMaxValue"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_gravity="center"
        android:contentDescription="Maximum Value"
        android:stepSize="1"
        android:value="40"
        android:valueFrom="5.0"
        android:valueTo="105" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_margin="2dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:baselineAligned="false"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_volume"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/lowerVolume"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:insetLeft="2dp"
            android:insetRight="2dp"
            android:text="-"
            android:textSize="30sp" />

        <Button
            android:id="@+id/raiseVolume"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:insetLeft="2dp"
            android:insetRight="2dp"
            android:text="+"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:textAlignment="center">

        <Button
            android:id="@+id/cameraOnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:text="Camera On"
            android:textSize="15sp" />

        <Button
            android:id="@+id/cameraOffButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:text="Camera Off"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_margin="2dp"/>

    <TextView
        android:id="@+id/label_tracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tracking"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:textAlignment="center">

        <Button
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:text="@string/start"
            android:textSize="15sp" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:text="@string/stop"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/getStatusButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:padding="10sp"
        android:text="@string/get_status"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_last_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF1100"
        android:textSize="24sp" />

</LinearLayout>
